--- a/style.css
+++ b/style.css
@@ -8,4 +8,16 @@
 
 body {
   background-color: #fdfbfb;
+}
+
+#cabecalho {
+  position: fixed;
+  top: 0;
+  background-color: #8e44ad;
+  color: #ecf0f1;
+  text-align: center;
+  font-size: 12px;
+  padding: 10px 0;
+  width: 100%;
+  box-shadow: 0px 2px 5px #222222;
 }/*# sourceMappingURL=style.css.map */
