--- a/style.scss
+++ b/style.scss
@@ -10,3 +10,15 @@
 body {
     background-color: rgb(253, 251, 251);
 }
+
+#cabecalho {
+    position: fixed;
+    top: 0;
+    background-color: #8e44ad;
+    color: #ecf0f1;
+    text-align: center;
+    font-size: 12px;
+    padding: 10px 0;
+    width: 100%;
+    box-shadow: 0px 2px 5px rgb(34, 34, 34);
+}
