--- a/style.css
+++ b/style.css
@@ -20,4 +20,94 @@ body {
   padding: 10px 0;
   width: 100%;
   box-shadow: 0px 2px 5px #222222;
+}
+
+.content {
+  max-width: 1024px;
+  border-radius: 5px;
+  width: 98%;
+  margin: 80px auto 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  color: #2c3e50;
+}
+.content .lado-esquerdo {
+  width: 250px;
+  margin: 10px 10px;
+  background-color: #ecf0f1;
+  border-radius: 5px;
+}
+.content .lado-esquerdo .name {
+  text-align: center;
+  margin-top: -20px;
+  margin-bottom: 5px;
+  color: #8e44ad;
+}
+.content .lado-esquerdo #minha_foto {
+  width: 230px;
+  border-radius: 100%;
+  margin: 10px;
+}
+.content .lado-esquerdo .social-icons {
+  text-align: center;
+  display: flex;
+  justify-content: space-around;
+  margin: 0 auto;
+  width: 130px;
+}
+.content .lado-esquerdo .social-icons img {
+  width: 30px;
+}
+.content .lado-esquerdo #licoes_aprendidas, .content .lado-esquerdo #licoes_a_aprender {
+  margin: 20px 0;
+}
+.content .lado-esquerdo #licoes_aprendidas h3, .content .lado-esquerdo #licoes_a_aprender h3 {
+  text-align: center;
+  margin-bottom: 10px;
+  color: #8e44ad;
+}
+.content .lado-esquerdo #licoes_aprendidas li, .content .lado-esquerdo #licoes_a_aprender li {
+  margin-left: 65px;
+  list-style: square;
+}
+@media (max-width: 800px) {
+  .content .lado-esquerdo {
+    width: 100%;
+    margin: 10px 10px;
+  }
+  .content .lado-esquerdo .avatar-pic {
+    width: 250px;
+    margin: 0 auto;
+  }
+}
+.content .lado-direito, .content .extra-text {
+  background-color: #ecf0f1;
+  max-width: 700px;
+  width: 100%;
+  margin: 10px 10px;
+  border-radius: 5px;
+  padding: 20px;
+}
+@media (max-width: 800px) {
+  .content .lado-direito iframe, .content .extra-text iframe {
+    height: 200px;
+  }
+}
+.content .extra-content {
+  background-color: #ecf0f1;
+  width: 95%;
+  margin-left: 10px;
+  padding: 20px;
+}
+.content .table {
+  display: none;
+}
+
+#rodape {
+  width: 100%;
+  margin-top: 20px;
+  background-color: #360037;
+  padding: 30px;
+  color: #ecf0f1;
+  text-align: center;
 }/*# sourceMappingURL=style.css.map */
