--- a/style.scss
+++ b/style.scss
@@ -22,3 +22,106 @@ body {
     width: 100%;
     box-shadow: 0px 2px 5px rgb(34, 34, 34);
 }
+
+.content {
+    max-width: 1024px;
+    border-radius: 5px;
+    width: 98%;
+    margin: 80px auto 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    color: #2c3e50;
+
+    .lado-esquerdo {
+        width: 250px;
+        margin: 10px 10px;
+        background-color: #ecf0f1;
+        border-radius: 5px;
+
+        .name {
+            text-align: center;
+            margin-top: -20px;
+            margin-bottom: 5px;
+            color: #8e44ad;
+        }
+
+        #minha_foto {
+            width: 230px;
+            border-radius: 100%;
+            margin: 10px;
+        }
+
+        .social-icons {
+            text-align: center;
+            display: flex;
+            justify-content: space-around;
+            margin: 0 auto;
+            width: 130px;
+        }
+
+        .social-icons img {
+            width: 30px;
+        }
+
+        #licoes_aprendidas, #licoes_a_aprender {
+            margin: 20px 0;
+            
+            h3 {
+                text-align: center;
+                margin-bottom: 10px;
+                color: #8e44ad;
+            }
+            li {
+                margin-left: 65px;
+                list-style: square;
+            }
+        }
+    }
+
+    @media (max-width: 800px) {
+        .lado-esquerdo {
+            width: 100%;
+            margin: 10px 10px;
+
+            .avatar-pic {
+                width: 250px;
+                margin: 0 auto;
+            }
+        }
+    }
+
+    .lado-direito, .extra-text {
+        background-color: #ecf0f1;
+        max-width: 700px;
+        width: 100%;
+        margin: 10px 10px;
+        border-radius: 5px;
+        padding: 20px;
+
+        @media (max-width: 800px) {
+            iframe {
+                height: 200px;
+            }
+        }
+    }
+
+    .extra-content {
+        background-color: #ecf0f1;
+        width: 95%;
+        margin-left: 10px;
+        padding: 20px;
+    }
+
+    .table {
+        display: none;
+    }
+}
+
+#rodape {
+    width: 100%;
+    margin-top: 20px;
+    background-color: #360037;
+    padding: 30px;
+    color: #ecf0f1;
+    text-align: center;
+}
