--- a/style.scss
+++ b/style.scss
@@ -8,6 +8,9 @@
 }
 
 body {
+    font-family: "Open Sans", sans-serif;
+    line-height: 1.7;
+    color: white;
     background-color: rgb(253, 251, 251);
 }
 
